--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,41 @@
-Flask
-Flask-PyMongo
-Flask-JWT-Extended
-python-dotenv
-Werkzeug
+asttokens==2.4.1
+blinker==1.9.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+debugpy==1.8.6
+decorator==5.1.1
+dnspython==2.7.0
+exceptiongroup==1.2.2
+executing==2.1.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.1
+Flask-PyMongo==2.3.0
+ipykernel==6.29.5
+ipython==8.27.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+parso==0.8.4
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+psutil==6.0.0
+pure_eval==0.2.3
+Pygments==2.18.0
+PyJWT==2.10.1
+pymongo==4.10.1
+python-dotenv==1.0.1
+pywin32==306
+pyzmq==26.2.0
+stack-data==0.6.3
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+wcwidth==0.2.13
+Werkzeug==3.1.3
